doc: update doc
